--- a/presentation/slides/roadmap.tex
+++ b/presentation/slides/roadmap.tex
@@ -25,10 +25,10 @@
     }
 
     \uncover<3->{
-    \item Evaluating $\hat{\gL} u_{\vtheta}(\vx)$
+    \item Evaluating $\gL u_{\vtheta}(\vx)$
       \uncover<4->{\hfill \textcolor{orange}{\bfseries Linear layer: $\mZ^{(l)} = \mW \mZ^{(l-1)}$}}
       \begin{align*}
-        \mZ^{(0)} \mapsto \mZ^{(1)} \mapsto \mZ^{(2)} \mapsto \ldots \mapsto \mZ^{(L)} \mapsto \hat{\gL} u_{\vtheta}(\vx)
+        \mZ^{(0)} \mapsto \mZ^{(1)} \mapsto \mZ^{(2)} \mapsto \ldots \mapsto \mZ^{(L)} \mapsto \gL u_{\vtheta}(\vx)
       \end{align*}
       with \emph{matrix-valued} $\mZ^{(l)}$ and dependencies determined by Taylor-mode
     }
