--- a/poster/postertheme/vector_institute/vector_institute.sty
+++ b/poster/postertheme/vector_institute/vector_institute.sty
@@ -124,9 +124,17 @@
 \newcommand{\headerlogo}{
   % Place logos around title
   \makeatletter%
-  \node[anchor=east, xshift=-1cm, align=right] at
-  ($ (TP@title.south east)!0.275!(TP@title.north east) $)
+  \node[anchor=west, xshift=1cm, align=left] (vector) at
+  ($ (TP@title.south west)!0.275!(TP@title.north west) $)
   {\includegraphics[height=5cm]{postertheme/vector_institute/assets/logo_horizontal_inverted}
+  };%
+  \node[anchor=west, xshift=1cm, align=left] (eth) at
+  (vector.east)
+  {\includegraphics[height=5cm]{postertheme/vector_institute/assets/eth_inverted.png}
+  };%
+  \node[anchor=east, xshift=-1cm, align=right] (rwth) at
+  ($ (TP@title.south east)!0.275!(TP@title.north east) $)
+  {\includegraphics[height=5cm]{postertheme/vector_institute/assets/rwth_logo.png}
   };%
   \makeatother
 }
